<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D8D8D8"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/discussion" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#3E3D3D"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/userNameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/text_box"
                android:drawableStart="@drawable/user"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/enter_full_name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="5dp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/userEmailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/text_box"
                android:drawableStart="@drawable/gmail"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="5dp"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/text_box"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="5dp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/createAccBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@drawable/button_style"
                android:text="@string/create_account" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="210dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:background="@drawable/button_style"
                android:text="@string/click_here_to_log_in"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>